--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,6 @@ body {
 }
 
 .noScrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;  
+  scrollbar-width: none;
 }
